# CUDA-Terminal-edge-mesh

./: .gitignore  BET_elimination.cu  BET_elimination.cuh  CMakeLists.txt  README.md  io.cu  io.cuh  main.cu  polygon.cu  polygon.cuh  saxpy.cu  triang.cu  triang.cuh  triang_edge.cu  triang_edge.cuh
Pruebas/: cspruebas.txt  cudapruebas.txt
figuras/: datamesh.eps  datastructmesh  datastructmesh.ipe  labeldelaunay.eps  labeldelaunaylongest.eps  memorysplit.eps  memorysplit.ipe  memorysplitproblem.eps  mesharray.eps  meshtothead.eps  newmeshdatastruct.eps  newsplit.eps  newsplit2.eps  newsplit3.eps  newsplit4.eps  originaltriangulation.eps  parallelreduction.ipe  registerthread.eps  registerthread2.eps  seed2.eps  seedtrianglelabel.eps
scripts/: Polylla  PolyllaCUDA  a.out  generatetrivertex.cu  generatetrivertexnocuda.cu  randomdata.sh  randomdata2.sh  test.sh
